<resources>
    <string name="app_name" translatable="false">MySync</string>
    <string name="settings">Settings</string>
    <string name="button_save">Save</string>
    <string name="srv_settings">Server Settings</string>
    <string name="loc_settings">Local Settings</string>
    <string name="log">Log File</string>
    <string name="opt">Rsync Options</string>
    <string name="path">Local Path</string>
    <string name="Net_ssid">Network SSID</string>
    <string name="srv_ip">Server IP Address</string>
    <string name="srv_mod">Rsync Server Mod</string>
    <string name="rsync_user">Rsync User</string>
    <string name="srv_port">Port</string>
    <string name="add_but">Add</string>
    <string name="add_path">Add Path</string>
    <string name="get_ssid">Get Current SSID</string>
    <string name="about">This application is just a wrapper for rsync. This program may be useful for people that want to implement a simple rsync solution in their LAN. The interface is just a front-end for the rsync command that runs in the background.</string>
    <string name="how_to_use">Enter the rsync server details.</string>
    <string name="rs_opt">Rsync Options</string>
    <string name="a">-a</string>
    <string name="v">-v</string>
    <string name="z">-z</string>
    <string name="r">-r</string>
    <string name="help">How to use this Application\n 1.Server Settings:\n\ta.Server IP Address: Fill in the server\'s listening LAN address (e.g 192.168.1.100). Next, type the listening port (default 873).
        If you leave this field empty the default port will be used. \n\tb.Rsync User: Enter the user that is permitted to connect to the rsync server.
        \n\tc.Rsync Server Mod: Type the name of the rsync module that you want to connect to. \n\n2.Local Settings: \n\ta.
        Add Path: Select the folder that you want to sync with the rsync server. \n\n3. Select the rsync options</string>
    <string name="rsync_options">\n\t -v, increase verbosity \n\t -q, suppress non-error messages \n\t -a, archive mode; equals -rlptgoD  \n\t  -z, compress file data during the transfer \n\t
        -r, recurse into directories \n\t -u, skip files that are newer on the receiver \n\t -p, preserve permissions \n\t -o, preserve owner (super-user only) \n\t -g, preserve group \n\t -t,
        preserve modification times \n\t -n, perform a trial run with no changes made (dry run) \n\t -m, prune empty directory chains from file-list \n\t -O, omit directories from --times
        </string>
    <string name="adv_config_help">This section is addressed to experienced users of the utility, where any rsync configuration using any option described in rsync man page, can be used.\n\n
        In this form, there are three fields that must be completed: Options (without the leading \"-\"), Arg1 and Arg2.\n\n
        Any rsync configuration takes three arguments to complete. For your reference check the following part from rsync documentation:\n\n\n
        Local:  rsync [OPTION...] SRC... [DEST]\n\n\n

        Access via remote shell:\n\n
          Pull: \n rsync [OPTION...] [USER@]HOST:SRC... [DEST]\n\n
          Push: \n rsync [OPTION...] SRC... [USER@]HOST:DEST\n\n\n

        Access via rsync daemon:\n
          Pull: \n
                rsync [OPTION...] [USER@]HOST::SRC... [DEST]\n\n
                rsync [OPTION...] rsync://[USER@]HOST[:PORT]/SRC... [DEST]\n\n
          Push: \n
                rsync [OPTION...] SRC... [USER@]HOST::DEST\n\n
                rsync [OPTION...] SRC... rsync://[USER@]HOST[:PORT]/DEST\n\n\n

        So, Arg1 can be the expression for the SRC or DEST in case of pulling, and the Arg2 will be the Expression for DEST or SRC respectively. \n\n
        Example: \n Options: avzhe ssh --progress \n Arg1: /storage/emulated/0/DCIM \n Arg2: root@192.168.0.100:/backups \n\n
        For more info regarding the rsync documentation visit: https://download.samba.org/pub/rsync/rsync.html \n\n
    </string>

    <string name="ssh_help"> Before using rsync in remote shell configuration, passwordless ssh logins to the remote server must be setup. \n\n
        The user can do it manually or use a third-party app or use the "Generate SSH Keypair" button on this form. \n\n
        You need to import the generated public key /rsa_key.pub to your server.

    </string>

    <string name="save_and_view_command">Save and View Command</string>
    <string name="save_configuration">Save Configuration</string>
    <string name="generated_rsync_command">Generated Rsync Command:</string>
    <string name="title_activity_add_config">Add Rsync Configuration</string>
    <string name="save">Save</string>
    <string name="view_command">View Command</string>
    <string name="edit_config">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="no_data">No Configurations</string>
    <string name="no_schedulers">No Schedulers</string>
    <string name="Monday">M</string>
    <string name="Tuesday">T</string>
    <string name="Wednesday">W</string>
    <string name="Thursday">T</string>
    <string name="Friday">F</string>
    <string name="Saturday">S</string>
    <string name="Sunday">S</string>
    <string name="create_schedule">Create Schedule</string>
    <string name="app_about">About</string>
    <string name="exit">Exit</string>
    <string name="app_help">Help</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="notifications">Notifications</string>
    <string name="display_a_notification_when_an_rsync_job_starts">Display a Notification When an Rsync Job Starts</string>
    <string name="notifications_off">Notifications Off</string>
    <string name="notifications_on">Notifications On</string>
</resources>
